--- a/config.json
+++ b/config.json
@@ -4,17 +4,18 @@
   "instagram": {
     "active": true,
     "credentials" : {
-      "username": "1.1_c_lolo",
-      "password": "Olfactif666"
+      "username": "",
+      "password": ""
     },
     "target_username": ""
   },
   "twitter": {
     "active": true,
-    "consumer_key": "kxpbRAfLPVAt2pfnmSpwA2eAi",
-    "consumer_secret": "9AFCZbKgEoSvM4LrQqbruogVgdUjs5zEb9RI5f5zzCbxMfAoyW",
-    "access_token_key": "1417402822245638174-4NOEel47ELYTxFU7qvHQowZdJdWptf",
-    "access_token_secret": "k8YDAwt8MZpOkP8WNTYL9DkP1eSPjUpNm1zX3VgRGrvdK",
-    "target_id": 77223280
+    "consumer_key": "",
+    "consumer_secret": "",
+    "access_token_key": "",
+    "access_token_secret": "",
+    "target_id": 77223280,
+    "target_username": "CaucheteuxLoys"
   }
 }
